bk_ida/gccida/c2/specqsort
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:493:63: error: ISO C requires a named parameter before '...'
void  specqsort( char *base, int n, int size, int ( *compar)( ...)) 
                                                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:582:18: error: expected expression
v19 = *( _OWORD *)&v9[v18]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:582:10: error: use of undeclared identifier '_OWORD'
v19 = *( _OWORD *)&v9[v18]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:583:18: error: expected expression
v20 = *( _OWORD *)&v9[v18 + 16]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:583:10: error: use of undeclared identifier '_OWORD'
v20 = *( _OWORD *)&v9[v18 + 16]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:584:18: error: expected expression
v21 = *( _OWORD *)&base[v18 + 16]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:584:10: error: use of undeclared identifier '_OWORD'
v21 = *( _OWORD *)&base[v18 + 16]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:585:12: error: expected expression
*( _OWORD *)&v9[v18] = *( _OWORD *)&base[v18]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:585:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v9[v18] = *( _OWORD *)&base[v18]; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:585:35: error: expected expression
*( _OWORD *)&v9[v18] = *( _OWORD *)&base[v18]; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:585:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v9[v18] = *( _OWORD *)&base[v18]; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:586:12: error: expected expression
*( _OWORD *)&v9[v18 + 16] = v21; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:586:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v9[v18 + 16] = v21; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:587:12: error: expected expression
*( _OWORD *)&base[v18] = v19; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:587:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&base[v18] = v19; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:588:12: error: expected expression
*( _OWORD *)&base[v18 + 16] = v20; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:588:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&base[v18 + 16] = v20; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:589:18: error: expected expression
v22 = *( _OWORD *)&v9[v18 + 32]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/ucbqsort.c:589:10: error: use of undeclared identifier '_OWORD'
v22 = *( _OWORD *)&v9[v18 + 32]; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/specqsort/src/obj/ucbqsort.o] Error 1
